added locale switcher to mobile

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -67,6 +67,6 @@ const isActiveLink = (href: string) : boolean => { return href === currentPathna
     </div>
 
     <!-- Mobile Menu Button -->
-    <MobileMenu client:idle items={navigation} rfqHref={rfqHref} />
+    <MobileMenu client:idle items={navigation} rfqHref={rfqHref} enHref={enHref} frHref={frHref} />
   </nav>
 </header>
