added pt-20 lg:pt-0 on <main>

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -43,7 +43,7 @@ const {
   <body class="bg-white font-sans text-neutral-900 antialiased">
     <div class="flex min-h-screen flex-col">
       <Header currentPathname={currentPathname} />
-      <main class="flex-1">
+      <main class="flex-1 pt-20 lg:pt-0">
         <slot />
       </main>
       <Footer />
